--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Test</title>
+<title>RRV DSA Reading Group</title>
 </head>
 
 <body>
-  <h1>TEST</h1>
-</body>
+  <h1>Welcome</h1><h2>to the Red River Valley Democratic Socialists of America's Reading Group webpage</h2>
+  <br />
+  <h4>check out what we're reading below:</h4>
+
+
+  <p class="titles">
+    <ul>
+      <li><em>Capital, Vol. I</em></li>
+    </ul>
+
+  </p>
 
 
 
-</html>
+  <p class="footer">
+    Connect with us on <a href="https://www.facebook.com/rrvdsa/">Facebook</a>, <a href="https://twitter.com/rrvdsa?lang=en">Twitter</a>, or on our <a href="https://www.rrvdsa.org/">Homepage</a>.
+  </p>
+
