--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <p class="titles">
     <ul>
-      <li><em>Capital, Vol. I</em></li>
+      <li><a href="titles/Capital.html"><em>Capital, Vol. I</em></a></li>
     </ul>
 
   </p>
