--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>RRV DSA Reading Group</title>
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 
 <body>
@@ -23,3 +24,5 @@
     Connect with us on <a href="https://www.facebook.com/rrvdsa/">Facebook</a>, <a href="https://twitter.com/rrvdsa?lang=en">Twitter</a>, or on our <a href="https://www.rrvdsa.org/">Homepage</a>.
   </p>
 
+  </body>
+</html>
