--- a/index.html
+++ b/index.html
@@ -6,23 +6,38 @@
 </head>
 
 <body>
-  <h1>Welcome</h1><h2>to the Red River Valley Democratic Socialists of America's Reading Group webpage</h2>
+  <h1 class="heading">Welcome</h1><h2 class="heading2">to the Red River Valley Democratic Socialists of America's Reading Group webpage</h2>
   <br />
-  <h4>check out what we're reading below:</h4>
+  <h4>check out what we're reading:</h4>
 
 
-  <p class="titles">
-    <ul>
-      <li><a href="titles/Capital.html"><em>Capital, Vol. I</em></a></li>
-    </ul>
+  <p>
+    <table>
+      <tr>
+        <th class="title">Title</th>
+        <th class="title">Reading Schedule</th>
+      </tr>
+      <tr>
+        <th> <a href="titles/Capital.html"><em>Capital, Vol. I</em></a> </th>
+        <th> <a href="https://docs.google.com/spreadsheets/d/15Dy73u1fzTbLD7V5NSYXZ8s-Eog7dGyqJEILUPw2FXQ/edit?usp=sharing">Schedule</a></th>
+      </tr>
+
+    </table>
+
+
 
   </p>
 
-
+<br />
+<br />
+<br />
+<br />
 
   <p class="footer">
     Connect with us on <a href="https://www.facebook.com/rrvdsa/">Facebook</a>, <a href="https://twitter.com/rrvdsa?lang=en">Twitter</a>, or on our <a href="https://www.rrvdsa.org/">Homepage</a>.
   </p>
+
+<a href="https://www.dsausa.org/"><img src="roses.png" /></a> 
 
   </body>
 </html>
