--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1 class="heading">Welcome</h1><h2 class="heading2">to the Red River Valley Democratic Socialists of America's Reading Group webpage</h2>
+  <h1 class="heading">Welcome</h1><h2 class="heading2">to the Red River Valley Democratic - Socialists of America's Reading Group Webpage</h2>
   <br />
   <h4>check out what we're reading:</h4>
 
