--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-  <h1 class="heading">Welcome</h1><h2 class="heading2">to the Red River Valley - Democratic Socialists of America's Reading Group Webpage</h2>
+  <h1 class="heading">Welcome</h1><h2 class="heading2">To the Red River Valley - Democratic Socialists of America's Reading Group Webpage</h2>
   <br />
-  <h4>check out what we're reading:</h4>
+  <h4>Check out what we're reading:</h4>
 
 
   <p>
