--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <br />
 
   <p class="footer">
-    Connect with us on <a href="https://www.facebook.com/rrvdsa/">Facebook</a>, <a href="https://twitter.com/rrvdsa?lang=en">Twitter</a>, or on our <a href="https://www.rrvdsa.org/">Homepage</a>.
+    Are you connected with us on <a href="https://www.facebook.com/rrvdsa/">Facebook</a>, <a href="https://twitter.com/rrvdsa?lang=en">Twitter</a>, or our <a href="https://www.rrvdsa.org/">Homepage</a>?
   </p>
 
 <a href="https://www.dsausa.org/"><img src="roses.png" /></a> 
