--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <title>RRV DSA Reading Group</title>
   <link rel="stylesheet" type="text/css" href="CSS/style.css">
+  <link rel="icon" 
+      type="image/png" 
+      href="favicon.ico">
+  
+  
+  
 </head>
 
 <body>
