--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <th> <a href="titles/Capital.html"><em>Capital, Vol. I</em></a> </th>
-        <th> <a href="https://docs.google.com/spreadsheets/d/15Dy73u1fzTbLD7V5NSYXZ8s-Eog7dGyqJEILUPw2FXQ/edit?usp=sharing">Schedule</a></th>
+        <th> <a href="pages/capital-schedule.html">Schedule</a></th>
       </tr>
 
     </table>
