--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 </head>
 
-<body>
+<body class="main">
   <h1 class="heading">Welcome</h1><h2 class="heading2">To the Red River Valley DSA Reading Group Webpage</h2>
   <br />
   <h4>Check out what we're reading:</h4>
