--- a/pages/capital-schedule.html
+++ b/pages/capital-schedule.html
@@ -13,7 +13,7 @@
 
 <body>
   
-<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_vfxW_o8e3H9hNiWc0IfGja6Mt7Rkp_PfdIej8RL6z6UzkMbvZZRcjf6zW7vr52L1627pgevb_Gd-/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="width:100%; height:500px;overflow:auto;"></iframe>
+<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_vfxW_o8e3H9hNiWc0IfGja6Mt7Rkp_PfdIej8RL6z6UzkMbvZZRcjf6zW7vr52L1627pgevb_Gd-/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
   
   
   
