--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </tr>
       <tr>
         <th> <a href="titles/Capital.html"><em>Capital, Vol. I</em></a> </th>
-        <th> <a href="pages/capital-schedule.html">Schedule</a></th>
+        <th> <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vT_vfxW_o8e3H9hNiWc0IfGja6Mt7Rkp_PfdIej8RL6z6UzkMbvZZRcjf6zW7vr52L1627pgevb_Gd-/pubhtml?gid=0&single=true">Schedule</a></th>
       </tr>
 
     </table>
